@@ -1,7 +1,13 @@
 package org.example.productjpa.services;
 
+import org.example.productjpa.dto.OrderItemResponseDto;
+import org.example.productjpa.dto.OrderItemRequestDto;
+import org.example.productjpa.dto.OrderResponseDto;
+import org.example.productjpa.dto.OrderTotalResponseDto;
 import org.example.productjpa.exceptions.InvalidOrderException;
 import org.example.productjpa.exceptions.ResourceNotFoundException;
+import org.example.productjpa.mapper.OrderItemMapper;
+import org.example.productjpa.mapper.OrderMapper;
 import org.example.productjpa.model.Customer;
 import org.example.productjpa.model.Order;
 import org.example.productjpa.model.OrderItem;
@@ -13,6 +19,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -30,64 +37,78 @@ public class OrderService {
     @Autowired
     private ProductService productService;
 
+    @Autowired
+    private OrderMapper orderMapper;
+
+    @Autowired
+    private OrderItemMapper orderItemMapper;
+
     // Create order
-    public Order createOrder(Long customerId) {
-        Customer customer = customerService.getCustomerById(customerId);
+    public OrderResponseDto createOrder(Long customerId) {
+        Customer customer = customerService.getCustomerEntityById(customerId);
         Order order = new Order();
         order.setCustomer(customer);
-        return orderRepository.save(order);
+        Order savedOrder = orderRepository.save(order);
+        return orderMapper.toResponseDto(savedOrder);
     }
 
     // Read
-    public Order getOrderById(Long orderId) {
-        return orderRepository.findById(orderId)
+    public OrderResponseDto getOrderById(Long orderId) {
+        Order order = orderRepository.findById(orderId)
                 .orElseThrow(() -> ResourceNotFoundException.orderNotFound(orderId));
+        return orderMapper.toResponseDto(order);
     }
 
-    public List<Order> getAllOrders() {
-        return orderRepository.findAll();
+    public List<OrderResponseDto> getAllOrders() {
+        return orderMapper.toResponseDtoList(orderRepository.findAll());
     }
 
-    public List<Order> getCustomerOrders(Long customerId) {
+    public List<OrderResponseDto> getCustomerOrders(Long customerId) {
         // Verify customer exists
-        customerService.getCustomerById(customerId);
+        customerService.getCustomerEntityById(customerId);
         return orderRepository.findAll().stream()
                 .filter(o -> o.getCustomer().getId().equals(customerId))
-                .toList();
+                .map(orderMapper::toResponseDto)
+                .collect(Collectors.toList());
     }
 
-    public List<Order> getCustomerOrdersSortedByNewest(Long customerId) {
-        customerService.getCustomerById(customerId);
+    public List<OrderResponseDto> getCustomerOrdersSortedByNewest(Long customerId) {
+        customerService.getCustomerEntityById(customerId);
         return orderRepository.findAll().stream()
                 .filter(o -> o.getCustomer().getId().equals(customerId))
                 .sorted((o1, o2) -> o2.getOrderId().compareTo(o1.getOrderId()))
-                .toList();
+                .map(orderMapper::toResponseDto)
+                .collect(Collectors.toList());
     }
 
     // Add item to order
-    public OrderItem addItemToOrder(Long orderId, Long productId, int quantity) {
-        if (quantity <= 0) {
+    public OrderItemResponseDto addItemToOrder(Long orderId, OrderItemRequestDto orderItemRequestDto) {
+        if (orderItemRequestDto.getQuantity() <= 0) {
             throw new IllegalArgumentException("Quantity must be greater than zero");
         }
 
-        Order order = getOrderById(orderId);
-        Product product = productService.getProductById(productId);
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> ResourceNotFoundException.orderNotFound(orderId));
+
+        Product product = productService.getProductEntityById(orderItemRequestDto.getProductId());
 
         // Check stock
-        if (product.getStocks() < quantity) {
-            throw InvalidOrderException.insufficientStock(product.getName(), quantity, product.getStocks());
+        if (product.getStocks() < orderItemRequestDto.getQuantity()) {
+            throw InvalidOrderException.insufficientStock(product.getName(),
+                    orderItemRequestDto.getQuantity(), product.getStocks());
         }
 
         // Create order item
         OrderItem orderItem = new OrderItem();
         orderItem.setOrder(order);
         orderItem.setProduct(product);
-        orderItem.setQuantity(quantity);
+        orderItem.setQuantity(orderItemRequestDto.getQuantity());
 
         // Reduce product stock
-        productService.reduceStock(productId, quantity);
+        productService.reduceStock(orderItemRequestDto.getProductId(), orderItemRequestDto.getQuantity());
 
-        return orderItemRepository.save(orderItem);
+        OrderItem savedOrderItem = orderItemRepository.save(orderItem);
+        return orderItemMapper.toResponseDto(savedOrderItem);
     }
 
     // Remove item from order (and restore stock)
@@ -102,7 +123,7 @@ public class OrderService {
     }
 
     // Update item quantity
-    public OrderItem updateOrderItemQuantity(Long orderItemId, int newQuantity) {
+    public OrderItemResponseDto updateOrderItemQuantity(Long orderItemId, int newQuantity) {
         if (newQuantity <= 0) {
             throw new IllegalArgumentException("Quantity must be greater than zero");
         }
@@ -125,26 +146,33 @@ public class OrderService {
         }
 
         orderItem.setQuantity(newQuantity);
-        return orderItemRepository.save(orderItem);
+        OrderItem updatedOrderItem = orderItemRepository.save(orderItem);
+        return orderItemMapper.toResponseDto(updatedOrderItem);
     }
 
     // Get order items
-    public List<OrderItem> getOrderItems(Long orderId) {
-        Order order = getOrderById(orderId);
-        return order.getOrderItems();
+    public List<OrderItemResponseDto> getOrderItems(Long orderId) {
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> ResourceNotFoundException.orderNotFound(orderId));
+        return orderItemMapper.toResponseDtoList(order.getOrderItems());
     }
 
     // Calculate order total
-    public Double calculateOrderTotal(Long orderId) {
-        List<OrderItem> items = getOrderItems(orderId);
-        return items.stream()
+    public OrderTotalResponseDto getOrderTotal(Long orderId) {
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> ResourceNotFoundException.orderNotFound(orderId));
+
+        Double total = order.getOrderItems().stream()
                 .mapToDouble(item -> item.getProduct().getPrice() * item.getQuantity())
                 .sum();
+
+        return new OrderTotalResponseDto(orderId, total);
     }
 
     // Delete order
     public void cancelOrder(Long orderId) {
-        Order order = getOrderById(orderId);
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> ResourceNotFoundException.orderNotFound(orderId));
 
         // Restore all stock for items in this order
         for (OrderItem item : order.getOrderItems()) {
